# libopam

./: MODULE.bazel
lib/lexer/: BUILD.bazel  opam_lexer.c  opam_lexis.c
lib/lexer/lexis/: opam_lexis.re
lib/parser/: opam_package.c  opam_parser.c  opam_syntaxis.c  opam_syntaxis.h
lib/parser/syntaxis/: opam_syntaxis.y
test/unit/: BUILD.bazel
test/unit/lexer/: BUILD.bazel  lex_string_driver.c  lexer_build_test.c  lexer_deps_test.c  lexer_filters_test.c  lexer_test.c  lexer_test_init.c
test/unit/parser/: BUILD.bazel  parser_build_test.c  parser_deps_test.c
tools/: refresh.sh
