load("@rules_cc//cc:defs.bzl", "cc_library")
load("@makeheaders//rules:makeheaders.bzl", "makeheaders")

load("//config/cc:CONFIG.bzl", "BASE_COPTS")

TIMEOUT = "short"

test_suite(
    name = "lexis",
    tests = [
        ":lexer",
        ":build",
        ":deps",
        ":filters"
    ]
)
########
cc_test(
    name       = "build",
    linkstatic = True,
    srcs       = [
        "lexer_build_test.c",
        "lex_string_driver.c",
        "lexer_test_init.c",
        ":mkhdrs"
    ],
    deps       = [
        "//lib/lexer:opam_lexer",
        "@gopt//lib:gopt",
        "@liblogc//lib:logc",
        "@unity//lib:unity",
        "@uthash//lib:uthash",
    ],
    copts      = BASE_COPTS + [
        "-I$(GENDIR)/test/unit/lexer",
    ],
    linkopts   = [],
    timeout    = TIMEOUT,
)

cc_test(
    name       = "deps",
    linkstatic = True,
    srcs       = [
        "lexer_deps_test.c",
        "lex_string_driver.c",
        "lexer_test_init.c",
        ":mkhdrs"
    ],
    deps       = [
        "//lib/lexer:opam_lexer",
        "@gopt//lib:gopt",
        "@liblogc//lib:logc",
        "@unity//lib:unity",
        "@uthash//lib:uthash",
    ],
    copts      = BASE_COPTS + [
        "-I$(GENDIR)/test/unit/lexer",
    ],
    linkopts   = [],
    timeout    = TIMEOUT,
)

cc_test(
    name       = "filters",
    linkstatic = True,
    srcs       = [
        "lexer_filters_test.c",
        "lex_string_driver.c",
        "lexer_test_init.c",
        ":mkhdrs"
    ],
    deps       = [
        "//lib/lexer:opam_lexer",
        "@gopt//lib:gopt",
        "@liblogc//lib:logc",
        "@unity//lib:unity",
        "@uthash//lib:uthash",
    ],
    copts      = BASE_COPTS + [
        "-I$(GENDIR)/test/unit/lexer",
    ],
    linkopts   = [],
    timeout    = TIMEOUT,
)

cc_test(
    name       = "lexer",
    linkstatic = True,
    srcs       = [
        "lexer_test.c",
        "lex_string_driver.c",
        "lexer_test_init.c",
        ":mkhdrs"
    ],
    deps       = [
        "//lib/lexer:opam_lexer",
        "@gopt//lib:gopt",
        "@liblogc//lib:logc",
        "@unity//lib:unity",
        "@uthash//lib:uthash",
    ],
    copts      = BASE_COPTS + [
        "-I$(GENDIR)/test/unit/lexer",
    ],
    linkopts   = [],
    timeout    = TIMEOUT,
)

############
makeheaders(
    name = "mkhdrs",
    hdrs_srcs = [
        "lexer_test.c",
        "lexer_build_test.c",
        "lexer_deps_test.c",
        "lexer_filters_test.c",
        "lex_string_driver.c",
        "lexer_test_init.c"
    ],
    additional_srcs = [
        "//lib/lexer:opam_lexer.c",
        "//lib/parser:opam_syntaxis.c",
    ] + select({
        "@obazl_config_cc//profile:dev?": [
            "@liblogc//macros:ansi_colors.h",
            "@liblogc//macros:logging_debug.h",
        ],
        "//conditions:default": [
            "@liblogc//macros:logging_ndebug.h",
        ]
    }),
)
